Trying to fix an issue with the grid layout where a second scrollbar appears

--- a/site/assets/css/card.css
+++ b/site/assets/css/card.css
@@ -298,6 +298,7 @@ body {
     -webkit-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
+    overflow: hidden;
 }
 
 
